--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,18 +11,20 @@ together = "^1.2.0"
 python-dotenv = "^1.0.1"
 instructor = "^1.3.2"
 
-
+typer = "^0.12.3"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
 ruff = "^0.4.8"
-
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.p]
 
 [tool.poetry.scripts]
+llmtext = "scripts.cli:app"
 start = "scripts.start:run"
 lint = "scripts.lint:run"
 publish = "scripts.publish:run"
+test = "scripts.test:run"
