--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "llmtext"
-version = "0.1.3"
+version = "0.1.4"
 description = "A simple llm library."
 authors = ["vikyw89 <vikyw89@gmail.com>"]
 readme = "README.md"
@@ -20,10 +20,8 @@ ruff = "^0.4.8"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.p]
-
 [tool.poetry.scripts]
-llmtext = "scripts.cli:app"
+cli = "scripts.cli:app"
 start = "scripts.start:run"
 lint = "scripts.lint:run"
 publish = "scripts.publish:run"
