--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,19 @@
 [tool.poetry]
 name = "llmtext"
-version = "0.1.4"
+version = "0.1.5"
 description = "A simple llm library."
 authors = ["vikyw89 <vikyw89@gmail.com>"]
 readme = "README.md"
+package-mode = true
+packages = [{include = "scripts"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
 together = "^1.2.0"
 python-dotenv = "^1.0.1"
 instructor = "^1.3.2"
-
 typer = "^0.12.3"
+
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
 ruff = "^0.4.8"
