--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = ["vikyw89 <vikyw89@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 together = "^1.2.0"
 python-dotenv = "^1.0.1"
 instructor = "^1.3.2"
 typer = "^0.12.3"
 spacy = "^3.7.5"
+lancedb = "^0.8.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
