--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "llmtext"
-version = "1.0.0"
+version = "1.0.1"
 description = "A simple llm library."
 authors = ["vikyw89 <vikyw89@gmail.com>"]
 readme = "README.md"
@@ -14,6 +14,7 @@ typer = "^0.12.3"
 spacy = "^3.7.5"
 lancedb = "^0.8.2"
 
+nest-asyncio = "^1.6.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
 ruff = "^0.4.8"
