--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "llmtext"
-version = "2.0.0"
+version = "2.0.1"
 description = "A simple llm library."
 authors = ["vikyw89 <vikyw89@gmail.com>"]
 readme = "README.md"
@@ -14,6 +14,8 @@ typer = "^0.12.0"
 spacy = "^3.7.0"
 nest-asyncio = "^1.6.0"
 
+langchain = "^0.2.5"
+black = "^24.4.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
 ruff = "^0.4.8"
