--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "llmtext"
-version = "3.0.2"
+version = "3.1.0"
 description = "A simple llm library."
 authors = ["vikyw89 <vikyw89@gmail.com>"]
 readme = "README.md"
@@ -14,6 +14,7 @@ instructor = "^1.3.0"
 nest-asyncio = "^1.6.0"
 black = "^24.4.2"
 
+portkey-ai = "^1.5.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 ruff = "^0.4.0"
