--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.0"
 instructor = "^1.3.0"
 pydantic = "2.7.*"
 
+aiohttp = "^3.9.5"
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
 pytest = "^8.2.0"
