--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "llmtext"
-version = "5.0.4"
+version = "5.0.5"
 description = "A simple llm library."
 authors = ["vikyw89 <vikyw89@gmail.com>"]
 readme = "README.md"
@@ -27,3 +27,9 @@ start = "scripts.start:run"
 lint = "scripts.lint:run"
 publish = "scripts.publish:run"
 test = "scripts.test:run"
+
+[tool.pytest.ini_options]
+log_file = "pytest.log"
+log_file_level = "DEBUG"
+log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
+log_file_date_format = "%Y-%m-%d %H:%M:%S"
