--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "llmtext"
-version = "5.0.6"
+version = "5.0.7"
 description = "A simple llm library."
 authors = ["vikyw89 <vikyw89@gmail.com>"]
 readme = "README.md"
@@ -11,6 +11,7 @@ python = "^3.10"
 python-dotenv = "^1.0.0"
 instructor = "^1.3.0"
 pydantic = "2.7.*"
+asyncer = "^0.0.7"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
